--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^8.0.0",
         "gulp-csso": "^4.0.1",
-        "gulp-stylus": "^2.7.1"
+        "gulp-stylus": "^2.7.1",
+        "gulp-svg-sprite": "^1.5.0"
     }
 }
